Finished Composite Sophont Log

--- a/Free Spacer/FreeSpacer.html
+++ b/Free Spacer/FreeSpacer.html
@@ -4030,7 +4030,7 @@
 		<div class="topLineText">Alias:</div>
 		<div class="aliasThreatName threatTextBox"><input type="text" name="attr_name" class="threatTextBox" /></div>
 		<div class="topLineText pronounThreat">Pronouns:</div>
-		<div class="pronounThreatName threatTextBox"><input type="text" name="attr_GenderIndentity" /></div>
+		<div class="pronounThreatName threatTextBox"><input type="text" name="attr_GenderIndentity" class="full" /></div>
 		<div class="sophontAspectColumnA">Concept:</div>
 		<div class="sophontTextColumnFull threatTextBox"><input type="text" name="attr_concept" /></div>
 		<div class="sophontAspectColumnA">Description:</div>
@@ -4109,8 +4109,9 @@
 		<div class="sophontAspectColumnA sophontNotes">Notes:</div>
 		<div class="sophontTextColumnFull threatTextBox sophontNotes"><input type="text" name="attr_notes" /></div>
 		<!--Condition Slots-->
-		<div class="sophontConditionWidget">
+		<div class="compositeSophontConditionWidget">
 			<div class="sophontConditionTitle">Conditions Slots</div>
+			<div class="sophontConditionNumber"><input type="text" name="attr_additionalCompositeSophont1" class="sophontConditionNumber" /></div>
 			<!--Armour 1-->
 			<input type="checkbox" class="hideCheckbox smallCheckbox sophontConditionCheckbox sophontCondition1" name="attr_armourSlot1" value="1" />
 			<span class="smallPips hexSelector sophontConditionCheckbox sophontCondition1"></span>
@@ -4215,6 +4216,132 @@
 			<div class="sophontConditionText threatTextBox">Vitality[5]</div>
 			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontConditionArmour sophontCondition9" name="attr_vitalityCondition" value="1" />
 			<span class="vital largePips sophontConditionArmour sophontCondition9"></span>
+		</div>
+
+		<!--Additional Condition Slots-->
+		<!--Slots 2-->
+		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition2">
+			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont2" class="sophontConditionNumber" /></div>
+			<!--Armour 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat2" value="1" />
+			<span class="largePips armour sophontCondition1 additionalSophontColumn"></span>
+			<!--Armour 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition2 additionalSophontColumn" name="attr_armourCondition2Threat2" value="1" />
+			<span class="largePips armour sophontCondition2 additionalSophontColumn"></span>
+			<!--Armour 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition3 additionalSophontColumn" name="attr_armourCondition3Threat2" value="1" />
+			<span class="largePips armour sophontCondition3 additionalSophontColumn"></span>
+			<!--Armour 4-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition4 additionalSophontColumn" name="attr_armourCondition4Threat2" value="1" />
+			<span class="largePips armour sophontCondition4 additionalSophontColumn"></span>
+			<!--Armour 5-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition5 additionalSophontColumn" name="attr_armourCondition5Threat2" value="1" />
+			<span class="largePips armour sophontCondition5 additionalSophontColumn"></span>
+			<!--Resilience 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition6 additionalSophontColumn" name="attr_resilienceAugmentationConditionThreat2" value="1" />
+			<span class="resilienceThreat largePips sophontCondition6 additionalSophontColumn"></span>
+			<!--Resilience 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat2" value="1" />
+			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Integrity-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat2" value="1" />
+			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<!--Vitality-->
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat2" value="1" />
+			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+		</div>
+		<!--Slots 3-->
+		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition3">
+			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont3" class="sophontConditionNumber" /></div>
+			<!--Armour 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat3" value="1" />
+			<span class="largePips armour sophontCondition1 additionalSophontColumn"></span>
+			<!--Armour 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition2 additionalSophontColumn" name="attr_armourCondition2Threat3" value="1" />
+			<span class="largePips armour sophontCondition2 additionalSophontColumn"></span>
+			<!--Armour 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition3 additionalSophontColumn" name="attr_armourCondition3Threat3" value="1" />
+			<span class="largePips armour sophontCondition3 additionalSophontColumn"></span>
+			<!--Armour 4-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition4 additionalSophontColumn" name="attr_armourCondition4Threat3" value="1" />
+			<span class="largePips armour sophontCondition4 additionalSophontColumn"></span>
+			<!--Armour 5-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition5 additionalSophontColumn" name="attr_armourCondition5Threat3" value="1" />
+			<span class="largePips armour sophontCondition5 additionalSophontColumn"></span>
+			<!--Resilience 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition6 additionalSophontColumn" name="attr_resilienceAugmentationConditionThreat3" value="1" />
+			<span class="resilienceThreat largePips sophontCondition6 additionalSophontColumn"></span>
+			<!--Resilience 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat3" value="1" />
+			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Integrity-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat3" value="1" />
+			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<!--Vitality-->
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat3" value="1" />
+			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+		</div>
+		<!--Slots 4-->
+		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition4">
+			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont3" class="sophontConditionNumber" /></div>
+			<!--Armour 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat4" value="1" />
+			<span class="largePips armour sophontCondition1 additionalSophontColumn"></span>
+			<!--Armour 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition2 additionalSophontColumn" name="attr_armourCondition2Threat4" value="1" />
+			<span class="largePips armour sophontCondition2 additionalSophontColumn"></span>
+			<!--Armour 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition3 additionalSophontColumn" name="attr_armourCondition3Threat4" value="1" />
+			<span class="largePips armour sophontCondition3 additionalSophontColumn"></span>
+			<!--Armour 4-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition4 additionalSophontColumn" name="attr_armourCondition4Threat4" value="1" />
+			<span class="largePips armour sophontCondition4 additionalSophontColumn"></span>
+			<!--Armour 5-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition5 additionalSophontColumn" name="attr_armourCondition5Threat4" value="1" />
+			<span class="largePips armour sophontCondition5 additionalSophontColumn"></span>
+			<!--Resilience 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition6 additionalSophontColumn" name="attr_resilienceAugmentationConditionThreat4" value="1" />
+			<span class="resilienceThreat largePips sophontCondition6 additionalSophontColumn"></span>
+			<!--Resilience 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat4" value="1" />
+			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Integrity-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat4" value="1" />
+			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<!--Vitality-->
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat4" value="1" />
+			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
+		</div>
+		<!--Slots 5-->
+		<div class="additionalCompositeSophontConditionWidget additionalCompositeSophontCondition5">
+			<div class="sophontConditionNumber additionalSophontColumn"><input type="text" name="attr_additionalCompositeSophont3" class="sophontConditionNumber" /></div>
+			<!--Armour 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition1 additionalSophontColumn" name="attr_armourCondition1Threat5" value="1" />
+			<span class="largePips armour sophontCondition1 additionalSophontColumn"></span>
+			<!--Armour 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition2 additionalSophontColumn" name="attr_armourCondition2Threat5" value="1" />
+			<span class="largePips armour sophontCondition2 additionalSophontColumn"></span>
+			<!--Armour 3-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition3 additionalSophontColumn" name="attr_armourCondition3Threat5" value="1" />
+			<span class="largePips armour sophontCondition3 additionalSophontColumn"></span>
+			<!--Armour 4-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition4 additionalSophontColumn" name="attr_armourCondition4Threat5" value="1" />
+			<span class="largePips armour sophontCondition4 additionalSophontColumn"></span>
+			<!--Armour 5-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition5 additionalSophontColumn" name="attr_armourCondition5Threat5" value="1" />
+			<span class="largePips armour sophontCondition5 additionalSophontColumn"></span>
+			<!--Resilience 1-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition6 additionalSophontColumn" name="attr_resilienceAugmentationConditionThreat5" value="1" />
+			<span class="resilienceThreat largePips sophontCondition6 additionalSophontColumn"></span>
+			<!--Resilience 2-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition7 additionalSophontColumn" name="attr_resilienceConditionThreat5" value="1" />
+			<span class="resilienceThreat largePips sophontCondition7 additionalSophontColumn"></span>
+			<!--Integrity-->
+			<input type="checkbox" class="hideCheckbox largeCheckbox sophontCondition8 additionalSophontColumn" name="attr_IntegrityConditionThreat5" value="1" />
+			<span class="integrityThreat largePips sophontCondition8 additionalSophontColumn"></span>
+			<!--Vitality-->
+			<input type="checkbox" class="vital hideCheckbox largeCheckbox sophontCondition9 additionalSophontColumn" name="attr_vitalityConditionThreat5" value="1" />
+			<span class="vital largePips sophontCondition9 additionalSophontColumn"></span>
 		</div>
 	</div>
 </div>
